--- a/newSite/index.html
+++ b/newSite/index.html
@@ -78,7 +78,7 @@
           data-date="2021-07-02 12:53"
           >Limited Time Offer</a
         >
-        <script class="e0acf2aca6ca288925c802dd7ebcaa8e" src="https://w.promofeatures.com/js/timer/e0acf2aca6ca288925c802dd7ebcaa8e.js?v=1625063703"></script>
+        <!-- <script class="e0acf2aca6ca288925c802dd7ebcaa8e" src="https://w.promofeatures.com/js/timer/e0acf2aca6ca288925c802dd7ebcaa8e.js?v=1625063703"></script> -->
         <form class="d-flex">
           <button
             class="btn btn-warning btn-lg rounded-pill bg-warning"
