favicon added, navbar fixed

--- a/newSite/index.html
+++ b/newSite/index.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <link rel="stylesheet" href="index.css" /> -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-TR9676S');</script>
+   <link rel="icon" size="64x64" type="image/png" href="./img/favicon.png"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -14,13 +19,16 @@
     <title>CuraLife | Summer Sales</title>
   </head>
   <body style="background-color: #fff">
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TR9676S"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
  
  <!-- NAVBAR -->
-    <div style="background-color: #01c6b2; overflow: hidden; position: -webkit-sticky; position: sticky; top: 0; z-index: 10; height: 100px">
+    <div style="background-color: #01c6b2; overflow: hidden; position: -webkit-sticky; position: sticky; top: 0; z-index: 10; height: 75px">
       <div class="row">
         <div class="col">
-          <div style="margin-left: 20%; padding-top: 5%"><img src="./img/logo.png" style="width: 200px;" /></div>
+          <div style="margin-left: 3.1rem; padding-top: 0.65rem"><img src="./img/logo.png" style="width: 135px;" /></div>
         </div>
+        <div class="col"></div>
         <div class="col"></div>
         <div class="col"></div>
         <div class="col"></div>
@@ -29,11 +37,11 @@
         <div class="col" style="padding: 1.8rem">
           <form class="d-flex">
             <button
-              class="btn btn-danger btn-lg rounded-pill bg-danger"
+              class="btn btn-lg rounded-pill"
               type="submit"
-              style="size: 100px;"
+              style="background-color: #ff4747; box-shadow: 0px 4px 4px 0px #9b4c4c; font-family: 'Poppins',sans-serif; color: #fff; margin-top: -1rem; margin-left: 5%; font-weight: bold; font-size: 1.15rem; line-height: 1.6;"
             >
-              SAVE UP TO 30%
+            SAVE UP TO 30%
             </button>
           </form>
         </div>
@@ -45,13 +53,13 @@
         background-image: url(./img/BGCuraLin1.jpg);
         background-repeat: no-repeat;
         background-size: cover;
-        height: 100%;
         background-color: #f7f7f7;
+        margin-top: -6.75rem;
       "
     >
       <img
         src="./img/sale_text-1c51adb7a76114521e168a0760ce9f4d.png"
-        style="width: 700px; margin-left: 12%; margin-top: 15%"
+        style="width: 647px; margin-left: 14rem; margin-top: 12.7rem"
       />
       <h1 style="margin-left: 10%; color: #008080; font-size: 50px">
         The CuraLin Summer Sale is On!
