what makes & ingredients done

--- a/newSite/index.html
+++ b/newSite/index.html
@@ -115,14 +115,14 @@
     <!-- WHAT MAKES CURALIN WORK SECTION -->
     <div style="background-color: #fff">
     <div class="container">
-      <h1 style="text-align: center; color: #ff4747">What Makes CuraLin Work?</h1>
-      <div style="max-width: 80%; margin-left: 10%">
-        <p style="text-align: center; padding-top: 15px">
-          The short answer, <strong>the powerful herbal ingredients</strong> in
+      <h1 style="text-align: center; color: #ff4747; font-family: 'Poppins',sans-serif; font-weight: 700; font-size: 40px; margin-top: 4rem; margin-bottom: 1rem;">What Makes CuraLin Work?</h1>
+      <div style="max-width: 75%; margin-left: 10rem">
+        <p style="text-align: center; font-family: 'Poppins',sans-serif; font-size: 17px; line-height: 28px; font-weight: 500; margin-bottom: 1rem;">
+          The short answer, <strong><i>the powerful herbal ingredients</i></strong> in
           CuraLin make it work. These ingredients have been used for thousands
           of years to support diabetics.
         </p>
-        <p style="text-align: center; padding-top: 15px">
+        <p style="text-align: center; font-family: 'Poppins',sans-serif; font-size: 17px; line-height: 28px; font-weight: 500; margin-bottom: 2rem;">
           Here's a quick run-down of some of the incredible ingredients in
           CuraLin that work synergistically to support healthy short and
           long-term glucose levels:
@@ -130,41 +130,43 @@
       </div>
       <div
         style="
-          width: 80%;
-          height: 275px;
+          width: 900px;
+          height: 250px;
           background-color: #e9e9e9;
-          margin-left: 10%;
-          border-radius: 15px;
+          margin-left: 8.5rem;
+          border-radius: 10px;
           padding: 20px;
+          min-height: calc(100%);
+          width: calc(80%);
         "
       >
         <div class="row">
-          <div class="col-8" style="border-right: 3px solid #fff">
+          <div class="col-8" style="border-right: 2px solid #fff">
             <img
               src="./img/quotes.png"
-              width="75px"
-              style="margin-left: 50%; margin-top: 8%"
+              width="50px"
+              style="margin-left: 18rem; margin-top: 1rem; padding-bottom: 10px;"
             />
             <div style="width: 75%; margin-left: 10%">
-              <h5 style="text-align: center">
+              <p style="text-align: center; font-family: 'Poppins',sans-serif; font-weight: 500; font-size: 22px; line-height: 30px;">
                 <strong
                   >CuraLin can make a big change in the lives of Diabetic
                   patients. It is safe and effective in supporting Hemoglobin
                   A1c levels.</strong
                 >
-              </h5>
+              </p>
             </div>
           </div>
           <div class="col-4">
             <img
               src="./img/drRaz.png"
-              width="75px"
+              width="53px"
               style="margin-left: 40%; margin-top: 15%"
             />
-            <p style="margin-left: 35%; color: #008080">
+            <p style="margin-left: 35%; color: #0072ce">
               <strong>Dr. Itamar Raz</strong>
             </p>
-            <p style="margin-left: 10%; color: #000000; margin-top: -5%">
+            <p style="margin-left: 10%; color: #000000; margin-top: -5%; font-family: 'Poppins',sans-serif; font-size: 15px; font-weight: 300; line-height: 18px;">
               <small
                 >Professor Itamar Raz is a board-certified doctor and professor
                 of Internal Medicine at the Hebrew University of
@@ -181,11 +183,11 @@
     <div class="container">
       <div class="row row-cols-2" style="padding: 10px; margin-top: 10px">
         <div class="col">
-          <img src="./img/amla.png" style="width: 200px; margin-left: 40%" />
-          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%">
+          <img src="./img/amla.png" style="width: 177px; margin-left: 40%" />
+          <p style="margin-left: 10%; text-align: center; margin-top: -5%; font-family: 'Poppins',sans-serif; font-size: 30px; color: #000; line-height: 40px;     font-weight: 700;">
             Amla
-          </h2>
-          <p style="margin-left: 15%; text-align: center">
+          </p>
+          <p style="margin-left: 15%; text-align: center;     font-family: 'Poppins',sans-serif;     font-weight: 300; font-size: 17px; line-height: 28px;">
             is rich in tannins, which support the pancreas to promote the
             healthy function of damaged cells. [29-30]
           </p>
@@ -193,14 +195,14 @@
         <div class="col">
           <img
             src="./img/bittermelon.png"
-            style="width: 200px; margin-left: 40%"
+            style="width: 177px; margin-left: 40%"
           />
-          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%">
+          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%;  font-family: 'Poppins',sans-serif; font-size: 30px; color: #000; line-height: 40px;     font-weight: 700;">
             Bitter Melon
           </h2>
 
           <div style="width: 90%">
-            <p style="margin-left: 15%; text-align: center">
+            <p style="margin-left: 15%; text-align: center;     font-family: 'Poppins',sans-serif;     font-weight: 300; font-size: 17px; line-height: 28px;">
               is traditionally used to support insulin sensitivity and healthy
               pancreatic function. [14-22]
             </p>
@@ -209,13 +211,13 @@
         <div class="col">
           <img
             src="./img/fenegreek.png"
-            style="width: 200px; margin-left: 40%"
+            style="width: 177px; margin-left: 40%"
           />
-          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%">
+          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%;  font-family: 'Poppins',sans-serif; font-size: 30px; color: #000; line-height: 40px;     font-weight: 700;">
             Fenugreek
           </h2>
           <div style="width: 90%">
-            <p style="margin-left: 15%; text-align: center">
+            <p style="margin-left: 15%; text-align: center;     font-family: 'Poppins',sans-serif;     font-weight: 300; font-size: 17px; line-height: 28px;">
               is rich in special fibers that support insulin production, release
               and usage. It also maintains a healthy rate of carbohydrate
               absorption in the digestive system! [26-28]
@@ -225,14 +227,14 @@
         <div class="col">
           <img
             src="./img/turmeric.png"
-            style="width: 200px; margin-left: 40%"
+            style="width: 177px; margin-left: 40%"
           />
 
-          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%">
+          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%;  font-family: 'Poppins',sans-serif; font-size: 30px; color: #000; line-height: 40px;     font-weight: 700;">
             Turmeric
           </h2>
           <div style="width: 90%">
-            <p style="margin-left: 15%; text-align: center">
+            <p style="margin-left: 15%; text-align: center;     font-family: 'Poppins',sans-serif;     font-weight: 300; font-size: 17px; line-height: 28px;">
               is a widely used traditional root for blood glucose support. It
               contains curcumin which promotes healthy blood glucose levels and
               insulin tolerance. It also supports the immune system. [23-25]
@@ -242,13 +244,13 @@
         <div class="col">
           <img
             src="./img/cinnamon.png"
-            style="width: 200px; margin-left: 40%"
+            style="width: 177px; margin-left: 40%"
           />
-          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%">
+          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%;  font-family: 'Poppins',sans-serif; font-size: 30px; color: #000; line-height: 40px;     font-weight: 700;">
             Cinnamon
           </h2>
           <div style="width: 90%">
-            <p style="margin-left: 15%; text-align: center">
+            <p style="margin-left: 15%; text-align: center;     font-family: 'Poppins',sans-serif;     font-weight: 300; font-size: 17px; line-height: 28px; ">
               promotes healthy insulin sensitivity & release and helps maintain
               healthy fasting glucose and A1c levels. Cinnamon also supports
               healthy weight loss and a healthy feeling nervous system. [51-52]
@@ -256,12 +258,12 @@
           </div>
         </div>
         <div class="col">
-          <img src="./img/cuming.png" style="width: 200px; margin-left: 40%" />
-          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%">
+          <img src="./img/cuming.png" style="width: 177px; margin-left: 40%" />
+          <h2 style="margin-left: 10%; text-align: center; margin-top: -5%;  font-family: 'Poppins',sans-serif; font-size: 30px; color: #000; line-height: 40px;     font-weight: 700;">
             Syzygium Cumini
           </h2>
           <div style="width: 90%">
-            <p style="margin-left: 15%; text-align: center">
+            <p style="margin-left: 15%; text-align: center;     font-family: 'Poppins',sans-serif;     font-weight: 300; font-size: 17px; line-height: 28px;">
               is a popular supplement in Ayurveda and traditional Chinese
               medicine for diabetes. It contains active compounds that support
               normal liver function and normal glucose levels. [43-44]
@@ -269,22 +271,29 @@
           </div>
         </div>
       </div>
-      <div style="margin-left: 50%">
+      <div style="margin-left: 18rem">
         <form class="d-flex">
           <button
-            class="btn btn-warning btn-lg rounded-pill bg-warning"
+            class="btn btn-lg rounded-pill"
             type="submit"
             style="
-              size: 100px;
-              margin-left: -8%;
-              margin-top: 2%;
-              color: #008080;
+              margin-left: 16.5rem;
+              margin-top: -0.5rem;
+              color: #00595b;
+              background: #ffc40e;
+              font-family: 'Poppins',sans-serif;
+              font-size: 18px;
+              font-weight: 700;
+
+              width: calc(190px);
+              height: calc(47px);
+              box-shadow: 0px 4px 4px 0px #e9997f;
             "
           >
             BUY NOW
           </button>
         </form>
-        <p style="size: 100px; margin-left: -15%; margin-top: 10">
+        <p style="font-size: 13px; margin-left: 16.5rem; margin-top: 0.5rem; font-family: 'Poppins',sans-serif; color: #00595b; font-weight: 700;">
           60-Day Money-Back Guarantee
         </p>
       </div>
