clinical section done

--- a/newSite/index.html
+++ b/newSite/index.html
@@ -303,16 +303,16 @@
     </div>
 
     <!-- CLINICALLY TESTED SECTION -->
-    <div style="width: 100%; background-color: #01c6b2">
-      <div style="width: 75%; margin-left: 15%">
-        <h1 style="text-align: center; color: #fff">
+    <div style="width: 100%; background-color: #01c6b2; padding-bottom: 3.1rem;">
+      <div style="width: 75%; margin-left: 14.8rem; padding: 2rem;">
+        <p style="text-align: center; color: #fff; font-family: 'Poppins',sans-serif; font-size: 40px; font-weight: 700; margin-top: 1.55rem; margin-bottom: -1.2rem">
           Clinically tested ingredients, now combined into a clinically
           tested<br />
           capsule.
-        </h1>
+        </p>
       </div>
       <div class="container">
-        <img src="./img/pill.png" style="margin-left: 31%; width: 40%" />
+        <img src="./img/pill.png" style="margin-left: 21.7rem; width: 600px" />
       </div>
     </div>
     <img src="./img/wavy3.jpg" style="width: 100%" />
