--- a/newSite/index.html
+++ b/newSite/index.html
@@ -413,103 +413,122 @@
       <img src="./img/clinicallytested.png" style="margin-left: 46%; margin-top: 1rem; margin-bottom: 20px; width: 150px"/>
 
       <!-- CARDS WITH BOTTLES -->
-      <div class="d-flex p-2 bd-highlight" style="margin-left: 26%">
+      <div class="d-flex p-2 bd-highlight" style="margin-left: 27.5rem">
         <!-- LEFT CARD -->
-        <div class="card" style="width: 25rem; margin-left: -15%; background-color: #fed6c9; border: none">
-          <img src="./img/bottles1.png"/>
+        <div class="card" style="width: 25rem; margin-top: 1.2rem; margin-left: -14%; background-color: #fed6c9; border: none">
+          <img src="./img/bottles1.png" style="width: 333px;"/>
           <div class="card-body">
-            <p class="card-text" style="font-size: 25px; text-align: center"><strong>CuraLin</strong></p>
-            <p class="card-text" style="font-size: 25px; text-align: center">175$</p>
+            <p class="card-text" style="margin-left: -4rem; font-size: 20px; text-align: center; font-family: 'Poppins',sans-serif; font-weight: 300; line-height: 32px;"><strong>CuraLin</strong></p>
+            <p class="card-text" style="margin-left: -4rem;  font-size: 20px; text-align: center;  font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 32px;">175$</p>
             <p style="text-align: center">
-            <span class="card-text" style="font-size: 25px; text-align: center; text-decoration: line-through; color: red">$75</span>
-            <span class="card-text" style="font-size: 25px; text-align: center;color: green">$69.50 per bottle</span>
+            <span class="card-text" style="margin-left: -3rem; font-size: 20px; text-align: center; text-decoration: line-through; color: #da2f2f;  font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 32px;">$75</span>
+            <span class="card-text" style=" font-size: 20px; text-align: center;color: #03b164;  font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 32px;">$69.50 per bottle</span>
             </p>
-            <p style="text-align: center"><small>or 4 interest-free installments
+            <p style="margin-left: -3.5rem; text-align: center; font-size: 14px ; font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 18px;">or 4 interest-free installments<br>
               of <strong>$16.88</strong> with <img src="./img/afterpay.png" style="width: 80px" />
-              </small></p>
+              </p>
              <div style="margin-left: 28%">
-                <form class="d-flex">
-                  <button
-                    class="btn btn-warning btn-lg rounded-pill bg-warning"
-                    type="submit"
-                    style="
-                      size: 100px;
-                      margin-top: 2%;
-                      color: #008080;
-                    "
-                  >
+              <form class="d-flex">
+                <button
+                  class="btn btn-lg rounded-pill"
+                  type="submit"
+                  style="
+                  margin-left: -2.5rem;
+                    color: #00595b;
+                    background: #ffc40e;
+                    font-family: 'Poppins',sans-serif;
+                    font-size: 18px;
+                    font-weight: 700;
+                    width: calc(190px);
+                    height: calc(47px);
+                    box-shadow: 0px 4px 4px 0px #e9997f;
+                  "
+                >
                   ADD TO CART
-                  </button>
-                </form>
-                <p style="size: 100px; margin-top: 10; margin-left: -15%">
-                  60-Day Money-Back Guarantee
-                </p>
+                </button>
+              </form>
+              <p style="margin-left: -2.5rem; font-size: 13px; margin-top: 0.5rem; font-family: 'Poppins',sans-serif; color: #00595b; font-weight: 700;">
+                60-Day Money-Back Guarantee
+              </p>
               </div>
           </div>
         </div>
         <!-- MIDDLE CARD -->
-        <div class="card" style="width: 25rem;  margin-left: 5%; background-color: #fed6c9; border: 4px solid; border-color: #ffc40e; border-radius: 10px;">
-          <img src="./img/bottles2.png"/>
+        <div class="card" style="width: 35rem;  margin-left: 2rem; background-color: #fed6c9; border: 3px solid; border-color: #ffc40e; border-radius: 20px;">
+          <img src="./img/bottles2.png" style="width: 333px; margin-left: 7rem; margin-right: 4rem; margin-top: 1rem"/>
           <div class="card-body">
-            <p class="card-text" style="font-size: 25px; text-align: center"><strong>CuraLin</strong></p>
-            <p class="card-text" style="font-size: 25px; text-align: center">$180.00</p>
+            <p class="card-text" style="font-size: 20px; text-align: center; font-family: 'Poppins',sans-serif; font-weight: 300; line-height: 32px;"><strong>CuraLin</strong></p>
+            <p class="card-text" style="font-size: 20px; text-align: center;  font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 32px;">180.00$</p>
             <p style="text-align: center">
-            <span class="card-text" style="font-size: 25px; text-align: center; text-decoration: line-through; color: red">$75</span>
-            <span class="card-text" style="font-size: 25px; text-align: center;color: green">$60 per bottle</span>
-             </p>
-            <p style="text-align: center"><small>or 4 interest-free installments
-              of <strong>$45.00</strong> with <img src="./img/afterpay.png" style="width: 80px" />
-              </small></p>
+            <span class="card-text" style="font-size: 20px; text-align: center; text-decoration: line-through; color: #da2f2f;  font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 32px;">$75</span>
+            <span class="card-text" style=" font-size: 20px; text-align: center;color: #03b164;  font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 32px;">$60 per bottle</span>
+            </p>
+            <p style="text-align: center; font-size: 14px ; font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 18px;">or 4 interest-free installments<br>
+              of <strong>$45</strong> with <img src="./img/afterpay.png" style="width: 80px" />
+              </p>
              <div style="margin-left: 28%">
-                <form class="d-flex">
-                  <button
-                    class="btn btn-warning btn-lg rounded-pill bg-warning"
-                    type="submit"
-                    style="
-                      size: 100px;
-                      margin-top: 2%;
-                      color: #008080;
-                    "
-                  >
-                  ADD TO CART
-                  </button>
-                </form>
-                <p style="size: 100px; margin-top: 10; margin-left: -15%">
-                  60-Day Money-Back Guarantee
-                </p>
+              <form class="d-flex">
+                <button
+                  class="btn btn-lg rounded-pill"
+                  type="submit"
+                  style="
+                  margin-left: 1rem;
+                    color: #00595b;
+                    background: #ffc40e;
+                    font-family: 'Poppins',sans-serif;
+                    font-size: 18px;
+                    font-weight: 700;
+                    width: calc(190px);
+                    height: calc(47px);
+                    box-shadow: 0px 4px 4px 0px #e9997f;
+                  "
+                >
+                ADD TO CART
+                </button>
+              </form>
+              <p style="margin-left: 1rem; font-size: 13px; margin-top: 0.5rem; font-family: 'Poppins',sans-serif; color: #00595b; font-weight: 700;">
+                60-Day Money-Back Guarantee
+              </p>
               </div>
          
           </div>
         </div>
         <!-- RIGHT CARD -->
-        <div class="card" style="width: 25rem; margin-left: 5%; background-color: #fed6c9; border: none">
-          <img src="./img/bottles3.png"/>
+        <div class="card" style="width: 25rem; margin-top: 1rem; margin-left: 8.5rem; background-color: #fed6c9; border: none">
+          <img src="./img/bottles3.png" style="width: 333px" />
           <div class="card-body">
-            <p class="card-text" style="font-size: 25px; text-align: center"><strong>CuraLin</strong></p>
-            <p class="card-text" style="font-size: 25px; text-align: center">$315.00</p>
+            <p class="card-text" style="margin-left: -3rem; font-size: 20px; text-align: center; font-family: 'Poppins',sans-serif; font-weight: 300; line-height: 32px;"><strong>CuraLin</strong></p>
+            <p class="card-text" style="margin-left: -3rem; font-size: 20px; text-align: center;  font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 32px;">$315.00</p>
             <p style="text-align: center">
-            <span class="card-text" style="font-size: 25px; text-align: center; text-decoration: line-through; color: red">$75</span>
-            <span class="card-text" style="font-size: 25px; text-align: center;color: green">$52.50 per bottle</span>
-            <p style="text-align: center"><small>or 4 interest-free installments
+            <span class="card-text" style="margin-left: -3rem; font-size: 20px; text-align: center; text-decoration: line-through; color: #da2f2f;  font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 32px;">$75</span>
+            <span class="card-text" style="font-size: 20px; text-align: center;color: #03b164;  font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 32px;">$52.50 per bottle</span>
+            </p>
+            <p style="margin-left: -3rem; text-align: center; font-size: 14px ; font-family: 'Poppins',sans-serif; font-weight: 500; line-height: 18px;">or 4 interest-free installments<br>
               of <strong>$78.75</strong> with <img src="./img/afterpay.png" style="width: 80px" />
-              </small></p>
-              <div style="margin-left: 28%">
-                <form class="d-flex">
-                  <button
-                    class="btn btn-warning btn-lg rounded-pill bg-warning"
-                    type="submit"
-                    style="
-                      size: 100px;
-                      margin-top: 2%;
-                      color: #008080;
-                    "
-                  >
-                  ADD TO CART
-                  </button>
-                </form>
-                <p style="size: 100px; margin-top: 10; margin-left: -15%">
-                  60-Day Money-Back Guarantee
-                </p>
+              </p>
+             <div style="margin-left: 28%">
+              <form class="d-flex">
+                <button
+                  class="btn btn-lg rounded-pill"
+                  type="submit"
+                  style="
+                    margin-left: -2.5rem;
+                    color: #00595b;
+                    background: #ffc40e;
+                    font-family: 'Poppins',sans-serif;
+                    font-size: 18px;
+                    font-weight: 700;
+                    width: calc(190px);
+                    height: calc(47px);
+                    box-shadow: 0px 4px 4px 0px #e9997f;
+                  "
+                >
+                ADD TO CART
+                </button>
+              </form>
+              <p style="margin-left: -2.5rem; font-size: 13px; margin-top: 0.5rem; font-family: 'Poppins',sans-serif; color: #00595b; font-weight: 700;">
+                60-Day Money-Back Guarantee
+              </p>
               </div>
           </div>
         </div>
