free shipping done

--- a/newSite/index.html
+++ b/newSite/index.html
@@ -534,15 +534,15 @@
         </div>
       </div> 
       <!-- END OF FLEXBOX -->
-      <img src="./img/60daymoneyback.png" style="width: 150px; margin-left: 48%; padding-top: 40px" />
+      <img src="./img/60daymoneyback.png" style=" width: 150px; margin-left: 55rem; padding-top: 40px; margin-bottom: 1.2rem;" />
 
       <!-- FREE SHIPPING SECTION -->
       <div class="container" style="padding-bottom: 5%">
-        <div class="d-flex p-2 bd-highlight" style="margin-left: 25%;">
-          <img src="./img/heroicons1.png" style="width: 60px;" /><div style="margin-right: 10%; margin-top: 1%">Free
+        <div class="d-flex p-2 bd-highlight" style="margin-left: 10rem;">
+          <img src="./img/heroicons1.png" style=" width: 52px; height: 37px" /><div style="margin-left: 10px; font-family: 'Poppins',sans-serif; font-size: 15px; font-weight: 500; line-height: 18px;">Free<br>
           Shipping</div>
-          <img src="./img/iconssecure.png" style="width: 60px"/><div style="margin-right: 10%; margin-top: 1% ">Secure Checkout</div>
-          <img src="./img/calender.png" style="width: 60px"/><div style="margin-right: 10%; margin-top: 1%">60-day money back guarantee</div>
+          <img src="./img/iconssecure.png" style="width: 40px; height: 35px; margin-left: 12rem"/><div style="margin-left: 10px;  font-family: 'Poppins',sans-serif; font-size: 15px; font-weight: 500; line-height: 18px;">Secure<br> Checkout</div>
+          <img src="./img/calender.png" style="width: 40px; height: 35px; margin-left: 12rem;"/><div style="margin-left: 10px;  font-family: 'Poppins',sans-serif; font-size: 15px; font-weight: 500; line-height: 18px;">60-day money back guarantee</div>
         </div>
       </div>
 
