--- a/newSite/index.html
+++ b/newSite/index.html
@@ -638,32 +638,26 @@
     <div style="background-color: #444444; color: #fff; padding: 3%">
       <!-- SOCIAL MEDIA ICONS -->
     <div class="container">
-      <div style="margin-left: 35%; width: 400px">
-        <div class="row">
-          <div class="col">
-            <a href="https://www.facebook.com/curalife/?redirect=false" target="_blank" rel="noopener noreferrer">
-         <img src="./img/facebook.png" style="width: 75px">
-        </a>
-          </div>
-          <div class="col">
-            <a href="https://twitter.com/CuraLife?redirect=false" target="_blank" rel="noopener noreferrer">
-            <img src="./img/twitter.png" style="width: 75px">
-            </a>
-          </div>
-          <div class="col">
+      <div style="margin-left: 35rem; padding-top: 1rem;">
+        <a href="https://www.facebook.com/curalife/?redirect=false" target="_blank" rel="noopener noreferrer">
+          <img src="./img/facebook.png" width="39px" style="margin-right: 1rem;"></a>
+          <a href="https://twitter.com/CuraLife?redirect=false" target="_blank" rel="noopener noreferrer">
+            <img src="./img/twitter.png" style="width: 39px; margin-right: 1rem;">
             <a href="https://www.instagram.com/curalife/?redirect=false" target="_blank" rel="noopener noreferrer">
-            <img src="./img/instagramm.png" style="width: 75px">
+              <img src="./img/instagramm.png" style="width: 39px">
+              </a>
             </a>
-          </div>
-        </div>
-      </div>
+      </div>  
     </div>
     <!-- COPYRIGHT & DISCLAIMER -->
-    <p style="text-align: center; padding-top: 2%">Copyright © 2021 CuraLife Commerce SIA. All rights reserved.</p>
-    <p style="text-align: center;">Use of this website signifies your agreement to the Disclaimer , Privacy & Cookie Policy and Terms & Conditions.
+    <div style="width: calc(65%); margin-left: 20rem;">
+ 
+    <p style="text-align: center; padding-top: 2%; font-family: 'Poppins',sans-serif; font-size: 12px; font-weight: 300; line-height: 18px;">Copyright © 2021 CuraLife Commerce SIA. All rights reserved.</p>
+    <p style="text-align: center; font-family: 'Poppins',sans-serif; font-size: 12px; font-weight: 300; line-height: 18px;">Use of this website signifies your agreement to the Disclaimer , Privacy & Cookie Policy and Terms & Conditions.
     </p>
-    <p style="text-align: center;"><small>*Results can vary and there is no guarantee of specific results. We recommend to always monitor blood sugar levels closely. This nutritional supplement is designed to enhance the general health, however, it cannot be regarded as means to diagnose, treat, cure or prevent any disease or illness. Ask your doctor about any questions concerning the compatibility of these supplements with your medical conditions or with medications before use. CuraLin is not recommended for those who are under 18, who are pregnant or nursing. The information contained in this Website is provided for general informational purposes only. It is not intended as and should not be relied upon as medical advice. The information may not apply to you and before you use any of the information provided on the site, you should contact a qualified medical, dietary, or other appropriate professional. All information and recommendations provided by CuraLife Commerce SIA (“CuraLife") regarding its nutritional supplements has been compiled with the utmost care and is provided for informative purposes only, taking into account the current scientific knowledge, but without claiming to be exhaustive or perfectly up-to-date. CuraLife cannot be held liable for abuse, careless use or any other use of this supplement, regarding dosage, storage, (re)packaging and/or use in combination with other products or medications. If you utilize any information provided on this site, you do so at your own decision and you specifically waive any right to make any claim against the author and publisher of this Website and materials as the result of the use of such information.</small>
+    <p style="text-align: center; font-family: 'Poppins',sans-serif; font-size: 14px; font-weight: 300; line-height: 18px; text-align: justify, center;"><small>*Results can vary and there is no guarantee of specific results. We recommend to always monitor blood sugar levels closely. This nutritional supplement is designed to enhance the general health, however, it cannot be regarded as means to diagnose, treat, cure or prevent any disease or illness. Ask your doctor about any questions concerning the compatibility of these supplements with your medical conditions or with medications before use. CuraLin is not recommended for those who are under 18, who are pregnant or nursing. The information contained in this Website is provided for general informational purposes only. It is not intended as and should not be relied upon as medical advice. The information may not apply to you and before you use any of the information provided on the site, you should contact a qualified medical, dietary, or other appropriate professional. All information and recommendations provided by CuraLife Commerce SIA (“CuraLife") regarding its nutritional supplements has been compiled with the utmost care and is provided for informative purposes only, taking into account the current scientific knowledge, but without claiming to be exhaustive or perfectly up-to-date. CuraLife cannot be held liable for abuse, careless use or any other use of this supplement, regarding dosage, storage, (re)packaging and/or use in combination with other products or medications. If you utilize any information provided on this site, you do so at your own decision and you specifically waive any right to make any claim against the author and publisher of this Website and materials as the result of the use of such information.</small>
     </p>
+  </div>
   </div>
 
     <script
